Tue Mar  2 16:47:40 2004  Owen Taylor  <otaylor@redhat.com>

	* tests/testfilechooser.c (set_filename_existing_nonexistent_cb): 
	Move the /nonexistant stuff out of the main window,
	keep the main window somewhat normal looking.

Tue Mar  2 16:18:43 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_reorder)
	* gtk/gtkliststore.c (gtk_list_store_reorder): Fix
	up the interpretation of new_order to match what
	it means elsewhere, document the meaning of new_order.

	* gtk/gtkcombobox.c (gtk_combo_box_model_rows_reordered):
	Fix interpretation of new_order.

	* tests/testcombochange.c (on_reorder): Fix interpretation
	of new_order.

	* tests/testcombochange.c (on_reorder): Fix hitting
	"reorder" with an empty list.

Tue Mar  2 21:23:30 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Patch from Frederic Crozat, test code from Jean-Philippe
	Chancelier. Fixes bug #120479.
	
	* gtk/gtkcombo.c (gtk_combo_popup_list): Make sure popup belongs
	to the right window group.

	* gtk/gtkmenu.c (gtk_menu_popup): Same

	* tests/testsocket.c (main): Pack the plugs into an hbox instead
	of a vbox.

	* tests/testsocket_common.c: Add a GtkMenuBar, a GtkCombo and a
	GtkComboBox to the children.

Tue Mar  2 14:38:23 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_model_row_inserted):
	If the model was empty before, select the first inserted
	item.

	* gtk/gtkcombobox.c (gtk_combo_box_model_row_deleted):
	Fix up the logic for the new row to select.

	* gtk/gtkcombobox.c (gtk_combo_box_class_init):
	Rename "appearance" property to "appears-as-list".

	* tests/testcombochange.c tests/Makefile.am: Test case
	for combos and dynamically changing models.

Tue Mar  2 15:19:52 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_get_resizable_hints): set the default
	value, spotted by Morten Welinder.

Tue Mar  2 15:03:15 2004  Jonathan Blandford  <jrb@redhat.com>
